--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    runtimeOnly 'mysql:mysql-connector-java'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
 }
 
 
