--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://sandramall-db-dev-01.cdphojwqewdc.us-east-2.r
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.tomcat.driver-class-name=com.mysql.jdbc.driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
