--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
+.idea/
+.gradle/
+build/
 *.iml
-.gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+**/.gradle/
+
 .DS_Store
-/build
 /captures
 .externalNativeBuild
 .cxx
