--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mindrot:jbcrypt:0.4'
 
+    implementation 'com.auth0:java-jwt:3.8.1'
+
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
 }
 
