--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://sandramall-db-dev-01.cdphojwqewdc.us-east-2.rds.amazonaws.com:3306/sandramall
+    url: jdbc:mysql://sandramall-db-dev-01.cdphojwqewdc.us-east-2.rds.amazonaws.com:3306/sandramall?characterEncoding=UTF-8&serverTimezone=UTC
     username: admin
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
