--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.mindrot:jbcrypt:0.4'
 
     implementation 'com.auth0:java-jwt:3.8.1'
+    implementation 'net.coobird:thumbnailator:0.4.8'
 
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
 }
