--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://sandramall-db-dev-01.cdphojwqewdc.us-east-2.rds.amazonaws.com:3306/sandramall?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=admin
-spring.datasource.password=sandramall!
+spring.datasource.password=password
 spring.datasource.tomcat.driver-class-name=com.mysql.jdbc.driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
